syntax = "proto3";

// export PATH="$PATH:$(go env GOPATH)/bin"
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative microservices/auth/gen_files/auth.proto

package auth;
option go_package = "./auth";

message SessionID {
  string ID = 1;
}

message Session {
  string login = 1;
}

message NewLogin {
  string ID = 1;
  string login = 2;
}

message Nothing {
  bool isSuccessful = 1;
}

// grpc-сервис проверки авторизации
service AuthChecker {
    rpc Create (Session) returns (SessionID) {}
    rpc Check (SessionID) returns (Session) {}
    rpc ChangeEmail (NewLogin) returns (Nothing) {}
    rpc Delete (SessionID) returns (Nothing) {}
}